--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,18 +1,22 @@
-.facebookBtn {
-  margin-left: 95 px !important;
-  padding-left: 20 px !important;
-  padding-top: 10 px !important;
-  padding-bottom: 10 px !important;
-  padding-right: 20 px !important;
-  border-right-width: 0 px !important;
+button {
+  font-family: Helvetica, sans-serif !important;
+  font-size: 16px !important;
+  font-weight: 700 !important;
+  box-shadow: rgb(0 0 0 / 24%) 0px 2px 2px 0px, rgb(0 0 0 / 24%) 0px 0px 1px 0px !important;
 }
 
-.kep-login-facebook.metro {
-    border-radius: 0;
-    margin-left: 95 px ;
-    padding-left: 20 px ;
-    padding-top: 10 px ;
-    padding-bottom: 10 px ;
-    padding-right: 20 px ;
-    border-right-width: 0 px ;
+span {
+  font-family: Helvetica, sans-serif !important;
+  font-size: 16px !important;
+  font-weight: 700 !important;
+}
+
+button.kep-login-facebook.metro {
+  border-radius: 0 !important;
+  margin-left: 90px !important;
+  padding-left: 20px !important;
+  padding-top: 10px !important;
+  padding-bottom: 10px !important;
+  padding-right: 20px !important;
+  border-right-width: 0px !important;
 }
