--- a/src/Components/DashBoard/DashBoard.css
+++ b/src/Components/DashBoard/DashBoard.css
@@ -29,6 +29,7 @@
   margin-left: 0px !important;
   margin-top: 8px !important;
   font-size: 16px !important;
+  font-weight: bold !important;
   color: blue;
 }
 
