add detail of class

--- a/src/Components/DashBoard/DashBoard.css
+++ b/src/Components/DashBoard/DashBoard.css
@@ -11,7 +11,7 @@
 .classItem {
   display: inline-block;
   width: 300px;
-  height: 450px;
+  height: 385px;
   margin: 0 auto;
 }
 
@@ -22,6 +22,8 @@
 
 .desc {
   text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
   margin: 0 auto !important;
 }
 
@@ -36,4 +38,9 @@
 .btn {
   margin-left: 8px !important;
   border: 1px solid !important;
+}
+
+.link {
+  text-decoration: none;
+  color: black;
 }
