--- a/src/Components/Posts/Posts.css
+++ b/src/Components/Posts/Posts.css
@@ -74,61 +74,40 @@
   font-weight: 500;
   font-style: normal;
 }
-.detail__announce {
+.detail__members {
   display: flex;
-  /* justify-content: center; */
+  justify-content: center;
   flex-shrink: 0;
   margin-top: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%;
 }
-.detail__announcements {
-  padding: 1rem;
+.detail__members_item {
+  padding: 1px;
   overflow: hidden;
-  margin: -2.4rem;
-  margin-left: 0.5rem;
+  margin: 0px;
+  margin-left: 1px;
+  width: 100%;
   /* margin-top: 1.5rem; */
 }
 .detail__subText {
   margin-top: 1.5rem;
   color: #807373;
   font-weight: 400;
-  width: 85vw;
 }
-/* .detail__status {
-  border: 1.5px solid #dadce0;
-  padding: 20px;
-  border-radius: 10px;
-  width: 10vw;
-  height: 00px;
-} */
-.link-invite {
-  border: 1.5px solid #dadce0;
-  padding: 10px;
-  border-radius: 10px;
-  width: 16vw;
-  height: 100px;
-}
-.grade-structure {
-  margin-top: 20px;
-  border: 1.5px solid #dadce0;
-  padding: 10px;
-  border-radius: 10px;
-  width: 16vw;
-  /* height: 300px; */
-}
-
-.detail__announcementsWrapper {
+.detail__memberWrapper {
   box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302),
     0 2px 6px 2px rgba(60, 64, 67, 0.149);
   border-radius: 0.5rem;
   overflow: hidden;
   min-height: 4.5rem;
-  width: 46rem;
+  width: 100%;
   margin-bottom: 1.5rem;
-  margin-top: 1.5rem;
 }
-.detail__ancContent {
+.detail__memberContent {
   padding: 30px;
-  width: 41vw !important;
+  width: 100% !important;
 
   color: rgba(0, 0, 0, 0.549);
 }
@@ -142,7 +121,7 @@
   margin-right: 20px;
 }
 #filled-multiline-flexible {
-  width: 44vw !important;
+  /* width: 50vw !important; */
   height: 20vh !important;
 }
 .detail__form {
@@ -153,7 +132,7 @@
 .detail__buttons {
   display: flex;
   justify-content: space-between;
-  width: 44.5vw !important;
+  width: 50vw;
   margin-top: 20px;
 }
 @media only screen and (max-width: 842px) {
@@ -166,7 +145,6 @@
   padding-top: 27px;
   padding-right: 0 !important;
   padding-bottom: 10px;
-  width: 44.5vw important;
 }
 
 .detail_menu {
@@ -182,10 +160,10 @@
   color: black;
   border: gray solid 1px;
   border-radius: 5px;
-  background-color:rgba(60, 64, 67, 0.05)
+  background-color: rgba(60, 64, 67, 0.05);
 }
 
-.detail_menu_item:hover{
+.detail_menu_item:hover {
   background-color: blue;
   color: white;
   cursor: pointer;
@@ -196,6 +174,64 @@
   color: white;
 }
 
-.detail__wrapper1001{
+.detail__wrapper1001 {
   margin-left: -16px;
 }
+
+.detail__member_role {
+  display: flex !important;
+  cursor: pointer;
+  align-items: center;
+  cursor: default;
+}
+
+.role__content {
+  font-family: "Times New Roman", Times, serif;
+  font-size: 24px;
+  font-weight: bold;
+  color: blue;
+  padding: 10px;
+  padding-left: 20px;
+}
+.btnAddUser {
+  background-color: royalblue;
+  padding: 6px;
+  padding-left: 8px;
+  padding-right: 8px;
+  color: white;
+  font-size: 10px;
+  font-weight: bold !important;
+  border: royalblue solid;
+  border-radius: 50%;
+  margin: 10px 10px 10px 10px;
+  position: relative;
+  left: 530px;
+}
+.btnAddUser:hover {
+  cursor: pointer;
+  background-color: blue;
+}
+.line {
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  color: gray;
+}
+
+.structure-content {
+  display: flex;
+  justify-content: space-between;
+}
+.structure-content__text {
+  font-weight: 700;
+  padding-top: 3px;
+}
+.structure-content__icon{
+  height: 24px;
+  align-items: center;
+}
+.structure-content__icon:hover {
+  cursor: pointer;
+  color: #4285f4;
+}
+
