--- a/src/Components/GradeForStudent/GradeForStudent.css
+++ b/src/Components/GradeForStudent/GradeForStudent.css
@@ -226,9 +226,9 @@
   height: 25px;
   max-width: 125px;
 }
-.name{
+.studentId, .totalGrade{
   text-align: center;
-  min-width: 75px;
+  min-width: 90px;
   border: 1px solid black;
   margin-right: 5px;
 }
