--- a/src/Components/Pages/GradeForStudent/GradeForStudent.css
+++ b/src/Components/Pages/GradeForStudent/GradeForStudent.css
@@ -217,6 +217,7 @@
 }
 
 .table {
+  margin-top: 15px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -224,8 +225,8 @@
 .grade {
   text-align: center;
   height: 25px;
-  max-width: 125px;
-  min-width: 120px; 
+  max-width: 150px;
+  min-width: 125px; 
   border: 1px solid black;
 }
 .studentId, .totalGrade{
@@ -242,7 +243,8 @@
 }
 .columns{
   border: 1px solid black;
-  max-width: 125px;
+  min-width: 125px;
+  max-width: 150px;
   color: white;
   background-color: #4285f4;
 }
