--- a/src/Components/Pages/PostsOfClass/PostsOfClass.css
+++ b/src/Components/Pages/PostsOfClass/PostsOfClass.css
@@ -92,6 +92,9 @@
   /* margin-top: 1.5rem; */
 }
 .detail__subText {
+  width: 250px;
+  word-wrap: break-word;
+  word-break: break-word;
   margin-top: 1.5rem;
   color: #807373;
   font-weight: 400;
